--- a/TraversalCoreProje/Views/Default/Index.cshtml
+++ b/TraversalCoreProje/Views/Default/Index.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_UILayout.cshtml";
 }
 
-@await Component.InvokeAsync("_SliderPartial")
+@await Component.InvokeAsync("_SliderPartial") @*ViewComponents de onun uzantısıda Views-Shared-Component in içinde*@
 
 @await Component.InvokeAsync("_PopularDestinations")
 
